// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Base Components > base-anchor renders with id 1`] = `"<div id="features"></div>"`;

exports[`Base Components > base-banner renders info variant 1`] = `
"<div class="flex items-center justify-center px-6 py-4 text-base bg-muted text-muted-foreground" role="alert">
  <div class="flex items-center gap-2 flex-1 justify-center"><span class="inline-block bg-current" style="width: 20px; height: 20px;"></span><span class="">Hello</span></div><button class="bg-transparent border-none text-4xl leading-none cursor-pointer text-current/70 px-3 py-1 hover:text-current transition-colors" aria-label="Dismiss"> × </button>
</div>"
`;

exports[`Base Components > base-button renders all variants 1`] = `
"<a href="/test" class="group inline-flex items-center rounded-lg font-medium leading-tight no-underline cursor-pointer transition duration-300 ease-in-out focus-visible:ring-[3px] focus-visible:ring-ring/50 focus-visible:border-ring outline-none bg-primary text-primary-foreground hover:bg-primary/75 gap-2 px-5 py-2 text-base xl:py-3">
  <!--v-if--><span>primary</span>
  <!--v-if-->
</a>"
`;

exports[`Base Components > base-button renders all variants 2`] = `
"<a href="/test" class="group inline-flex items-center rounded-lg font-medium leading-tight no-underline cursor-pointer transition duration-300 ease-in-out focus-visible:ring-[3px] focus-visible:ring-ring/50 focus-visible:border-ring outline-none bg-accent text-accent-foreground hover:bg-accent/70 gap-2 px-5 py-2 text-base xl:py-3">
  <!--v-if--><span>secondary</span>
  <!--v-if-->
</a>"
`;

exports[`Base Components > base-button renders all variants 3`] = `
"<a href="/test" class="group inline-flex items-center rounded-lg font-medium leading-tight no-underline cursor-pointer transition duration-300 ease-in-out focus-visible:ring-[3px] focus-visible:ring-ring/50 focus-visible:border-ring outline-none bg-transparent border border-current hover:bg-current/15 gap-2 px-5 py-2 text-base xl:py-3">
  <!--v-if--><span>outline</span>
  <!--v-if-->
</a>"
`;

exports[`Base Components > base-button renders primary 1`] = `
"<button class="group inline-flex items-center rounded-lg font-medium leading-tight no-underline cursor-pointer transition duration-300 ease-in-out focus-visible:ring-[3px] focus-visible:ring-ring/50 focus-visible:border-ring outline-none bg-primary text-primary-foreground hover:bg-primary/75 gap-2 px-5 py-2 text-base xl:py-3">
  <!--v-if--><span>Click me</span>
  <!--v-if-->
</button>"
`;

exports[`Base Components > base-button renders with icon 1`] = `
"<button class="group inline-flex items-center rounded-lg font-medium leading-tight no-underline cursor-pointer transition duration-300 ease-in-out focus-visible:ring-[3px] focus-visible:ring-ring/50 focus-visible:border-ring outline-none bg-primary text-primary-foreground hover:bg-primary/75 gap-3 px-6 py-3 text-lg xl:py-3.5">
  <!--v-if--><span>Next</span><span class="inline-block bg-current transition-transform duration-300 group-hover:translate-x-1" style="width: 24px; height: 24px;"></span>
</button>"
`;

exports[`Base Components > base-heading renders as link 1`] = `
"<a href="/page" class="font-bold text-2xl md:text-3xl text-start">
  <h3>Click me</h3>
</a>"
`;

exports[`Base Components > base-heading renders h1 with custom size 1`] = `"<h1 class="font-bold text-6xl text-primary text-center">Big Title</h1>"`;

exports[`Base Components > base-heading renders with defaults 1`] = `"<h2 class="font-bold text-3xl md:text-4xl text-start">Hello World</h2>"`;

exports[`Base Components > base-icon renders 1`] = `"<span class="inline-block bg-current" style="width: 32px; height: 32px;"></span>"`;

exports[`Base Components > base-image renders with media 1`] = `
"<figure class="m-0">
  <div class="block rounded-lg overflow-hidden"><img src="https://example.com/img.jpg" alt="Test" width="800" height="600" class="block w-full aspect-video object-cover" loading="lazy"></div>
  <figcaption class="mt-2 text-sm text-muted-foreground">A test image</figcaption>
</figure>"
`;

exports[`Base Components > base-rich-text renders html content 1`] = `
"<!-- eslint-disable-next-line vue/no-v-html -->
<div class="prose">
  <p>Hello <strong>world</strong></p>
</div>"
`;

exports[`Card Components > card-icon renders 1`] = `
"<div class="flex flex-col gap-3 p-5 md:p-6 no-underline text-inherit transition duration-300 items-center text-center bg-muted text-foreground rounded-lg"><span class="inline-block bg-current" style="width: 32px; height: 32px;"></span>
  <div class="flex flex-col gap-1">
    <h3 class="m-0 text-lg font-semibold">Fast</h3><!-- eslint-disable-next-line vue/no-v-html -->
    <div class="text-sm opacity-70">
      <p>Very fast.</p>
    </div>
  </div>
</div>"
`;

exports[`Card Components > card-image renders horizontal 1`] = `
"<div class="flex h-full overflow-hidden no-underline text-inherit transition duration-300 flex-row bg-accent text-accent-foreground rounded-lg">
  <div class="w-2/5 shrink-0"><img src="https://example.com/img.jpg" alt="Thumb" width="600" height="400" class="block w-full object-cover h-full" loading="lazy"></div>
  <div class="flex flex-col flex-grow gap-2 py-4 lg:py-6">
    <h3 class="m-0 text-lg font-semibold">Article</h3>
    <p class="m-0 text-sm opacity-70">A description.</p>
  </div>
</div>"
`;

exports[`Card Components > card-image renders vertical 1`] = `
"<div class="flex h-full overflow-hidden no-underline text-inherit transition duration-300 flex-col border border-border bg-background rounded-lg">
  <div class=""><img src="https://example.com/img.jpg" alt="Thumb" width="600" height="400" class="block w-full object-cover h-auto" loading="lazy"></div>
  <div class="flex flex-col flex-grow gap-2 p-4 lg:p-6">
    <h3 class="m-0 text-lg font-semibold">Article</h3>
    <p class="m-0 text-sm opacity-70">A description.</p>
  </div>
</div>"
`;

exports[`Hero Components > hero-billboard renders 1`] = `
"<div class="relative flex flex-col w-full overflow-hidden min-h-[32rem] justify-center items-start text-white">
  <div class="absolute inset-0"><img src="https://example.com/hero.jpg" alt="Hero" width="1920" height="1080" class="size-full object-cover object-center"></div>
  <!--v-if-->
  <div class="absolute inset-0 bg-black opacity-40"></div>
  <div class="relative z-10 flex flex-col gap-3 lg:gap-4 px-6 md:px-12 lg:px-16 max-w-4xl py-3 md:py-4 items-start">
    <h1 class="m-0 text-4xl md:text-5xl lg:text-6xl font-bold max-w-3xl">Welcome</h1>
    <p class="m-0 text-xl font-normal max-w-2xl">A hero description.</p>
    <div class="flex flex-col gap-4 sm:flex-row"><button>Go</button></div>
  </div>
</div>"
`;

exports[`Hero Components > hero-cta renders centered 1`] = `
"<div class="relative text-center bg-primary text-primary-foreground">
  <!--v-if-->
  <!--v-if-->
  <div class="absolute inset-0 bg-black opacity-40"></div>
  <div class="relative flex flex-col gap-6 lg:gap-8 py-20 lg:py-28 xl:py-36 px-6 md:px-12 lg:px-16 items-center mx-auto max-w-4xl">
    <h2 class="m-0 text-4xl md:text-5xl font-bold max-w-3xl">Call to action</h2>
    <p class="m-0 text-xl font-normal max-w-2xl">Do it now.</p>
    <div class="flex flex-col gap-4 sm:flex-row justify-center"><button>Go</button></div>
  </div>
</div>"
`;

exports[`Layout Components > layout-grid renders 3 columns 1`] = `
"<div class="grid grid-cols-1 w-full md:grid-cols-3 gap-6">
  <div>A</div>
  <div>B</div>
  <div>C</div>
</div>"
`;

exports[`Layout Components > layout-section renders with background and padding 1`] = `
"<section class="relative w-full bg-muted text-muted-foreground pt-16 pb-16">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <div class="relative mx-auto max-w-3xl px-4"></div>
</section>"
`;

exports[`Layout Components > layout-section renders with defaults 1`] = `
"<section class="relative w-full pt-8 pb-8">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <div class="relative mx-auto max-w-6xl px-4 md:px-8"></div>
</section>"
`;

exports[`Layout Components > layout-stack renders horizontal with background 1`] = `
"<div class="flex flex-row gap-6 items-start justify-start p-4 bg-primary text-primary-foreground rounded-lg">
  <div>A</div>
  <div>B</div>
</div>"
`;

exports[`Layout Components > layout-stack renders vertical 1`] = `
"<div class="flex flex-col gap-4 items-start justify-start">
  <div>A</div>
  <div>B</div>
</div>"
`;

exports[`Layout Components > layout-three-columns renders 33-33-33 1`] = `
"<div class="grid grid-cols-1 gap-4 sm:gap-6 w-full sm:grid-cols-[1fr_1fr_1fr]">
  <div>
    <p>A</p>
  </div>
  <div>
    <p>B</p>
  </div>
  <div>
    <p>C</p>
  </div>
</div>"
`;

exports[`Layout Components > layout-two-columns renders 50-50 1`] = `
"<div class="grid grid-cols-1 gap-4 sm:gap-6 w-full sm:grid-cols-[1fr_1fr]">
  <div>
    <p>Left</p>
  </div>
  <div>
    <p>Right</p>
  </div>
</div>"
`;

exports[`Layout Components > layout-two-columns renders 75-25 1`] = `
"<div class="grid grid-cols-1 gap-4 sm:gap-6 w-full sm:grid-cols-[3fr_1fr]">
  <div>
    <p>Wide</p>
  </div>
  <div>
    <p>Narrow</p>
  </div>
</div>"
`;
